--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "nodemon src/index.ts",
     "deploy": "prisma deploy",
     "generate": "prisma generate",
-    "prisma": "npm run deploy && npm run generate",
+    "prisma": "npm run generate && npm run deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "LeeJunyeol",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.5",
     "apollo-server": "^2.9.6",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "graphql-tools": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.0",
     "prisma-client-lib": "^1.34.10"
   },
