--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "LeeJunyeol",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.5",
     "apollo-server": "^2.9.6",
     "bcryptjs": "^2.4.3",
