--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "deploy": "prisma deploy",
-    "force-deploy": "prisma deploy --force",
+    "deploy": "prisma deploy --force",
     "generate": "prisma generate",
     "prisma": "npm run generate && npm run deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,11 +15,13 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/lodash": "^4.14.149",
     "apollo-server": "^2.9.6",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
-    "graphql-tools": "^4.0.5",
+    "graphql-tools": "^4.0.6",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "merge-graphql-schemas": "^1.7.0",
     "prisma-client-lib": "^1.34.10"
   },
